style.css
/* **********************NAVIGATION **************************************** */

header {


    animation: 2s ease-out 0s 1 slideInLeft;
    animation-delay: 3s;
}


.navbar-dark .navbar-toggler-icon {
    background-image:
        url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255)' stroke-linecap=' round' stroke-miterlimit=' 10' stroke-width=' 2' d=' M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.navbar-dark .navbar-toggler {
    border: 1px;
    color: #06d6a0;
}

#_navBar {

    top: 0;
    position: fixed;
    /* Make it stick/fixed */
    width: 100%;
    /* Full width */
    transition: top 0.3s;
    z-index: 1000;
    /* Transition effect when sliding down (and up) if desired */
}

/* Style the navbar links */
.navbar-dark .navbar-toggler-icon {
    background-image:
        url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255)' stroke-linecap=' round' stroke-miterlimit=' 10' stroke-width=' 2' d=' M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.navbar-dark .navbar-toggler {
    border: 1px;
    color: #06d6a0;
}


#_navBar a {
    float: right;
    color: white;
    text-align: center;
    padding: 15px;
}


#_navBar a:hover {
    background-color: #06d6a0;
    border-radius: 10px;
}


#footerNav {
    width: auto;

}

footer {
    position: fixed;
    z-index: 10;
}


#footerNav a:hover {
    background-color: #06d6a0;
    border-radius: 10px;
}

/* *********************END OF NAVIGATION*************************** */

/* ************************BODY***************************************** */


body {
    color: gainsboro;
    height: 100%;
    background-color: #001219;
    -webkit-overflow-scrolling: touch;
    -webkit-overflow-scrolling: scroll;
    background: #242f3f;
    overflow: hidden;
    width: 100%;
    min-height: 100%;
    line-height: 1.3;
    font-size: 20px;
}

section {
    display: flex;
    flex-wrap: wrap;
    position: relative;
    height: 100vh;
    justify-content: center;
    padding-top: 50px;
    padding-bottom: 50px;
    text-align: left;
    scroll-snap-align: start;
}

.underLine {
    text-decoration-line: underline;
    text-decoration-thickness: 1px;
    text-decoration-color: #06d6a0;
}

.inner {
    width: 800px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-radius: 10px;
    padding: 20px;
    background-color: #023047;
    box-shadow: 15px 20px 30px -15px #06d6a0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

/* 
.jobsStyled {
    height: 560px;
} */


.portfolioStyled {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    gap: 5px;

}

.homeStyled,
.jobsStyled,
.aboutStyled,
.portfolioStyled,
.contactStyled {
    box-shadow: 0 20px 30px -15px #f72585;
    padding: 5%;
}


.cards {
    padding-top: 5px;
    display: flex;
    justify-content: center;
}


.column {
    flex-direction: column;
    flex-basis: 100%;
    flex: 1;
}

main.fillHeight {
    padding: 0px 150px;
}

main {
    background-color: #001219;
    align-items: center;

    width: 100%;
    height: 100vh;
    overflow-y: scroll;
    scroll-behavior: smooth;
}

main.fillHeight {
    padding: 0px 150px;
}

.flip-card h3.big-heading {
    font-style: 10px;
    padding: 0px;
}


.flip-card {

    background-color: transparent;
    width: 200px;
    height: 100px;
    perspective: 1000px;
}

.flip-card-inner {

    position: relative;
    width: 100%;
    height: 100%;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
}


.flip-card img {
    width: 80px;
    height: 80px;

}


.flip-card-front,
.flip-card-back {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding: 1%;
    position: absolute;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    background-color: #023047;
    color: white;
}

.flip-card-back {
    transform: rotateY(180deg);
}

.flip-card-back img {

    border-radius: 4px;
    box-shadow: 0 20px 30px -15px #06d6a0;

}



#contact .inner {
    padding-bottom: 50px;
}



#hero {
    display: flex;
    flex-direction: column;
}

.inner .homeStyled,
.inner .jobsStyled,
.inner .portfolioStyled,
.inner .aboutStyled,
.inner .contactStyled {
    box-shadow: 0 20px 30px -15px #f72585;
    padding: 5%;

}

.tablinks {
    background-color: transparent;
    outline: none;
    text-align: center;
    cursor: pointer;
    background-color: #023047;
    color: #06d6a0;
    border-color: #001219;
    box-shadow: 0 20px 30px -15px #f72585;
}

.tablinks a:hover {
    border-bottom: 1px solid transparent;
}

.tablinks:hover {
    background-color: #001219;
}

.skills-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);

}



.aboutStyledPic {
    box-shadow: 0 10px 30px -15px #06d6a0;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border-width: 50px;
    border-color: #001219;
    align-self: center;
}


h1 {
    margin: auto;
}

h2.big-heading {
    margin: 0px;
    font-size: clamp(40px, 8vw, 80px);
}

h2.numbered-heading {
    margin: 10px 0px 40px;
}

.aboutStyled .numbered-heading {
    margin: 0;
}

h3.big-heading {
    margin-top: 10px;
    line-height: 1.3;
    font-size: 50px;
    color: #06d6a0;
}

.big-heading {
    margin: 0px;
    font-size: clamp(10px, 8vw, 30px);
}

button.tablinks {

    width: fit-content;
    border-radius: 5px;
}

#buttons.tab {
    display: flex;
}

::before,
::after {
    box-sizing: inherit;
}

/* ****************************END OF BODY*************************************** */

/* ******************************ANIMATIONS************************************************** */


@keyframes loader {
    0% {
        transform: rotate(0deg)
    }

    25% {
        transform: rotate(180deg)
    }

    50% {
        transform: rotate(180deg)
    }

    75% {
        transform: rotate(360deg)
    }

    100% {
        transform: rotate(360deg)
    }
}

@keyframes loader-inner {
    0% {
        height: 0%
    }

    25% {
        height: 0%
    }

    50% {
        height: 100%
    }

    75% {
        height: 100%
    }

    100% {
        height: 0%
    }
}

@keyframes slideInLeft {


    0% {
        transform: translateX(-100%);

    }

    100% {
        transform: translateX(0);

    }
}

@keyframes fadeInUp {
    from {
        transform: translate3d(0, 40px, 0)
    }

    to {
        transform: translate3d(0, 0, 0);
        opacity: 1
    }
}

@-webkit-keyframes fadeInUp {
    from {
        transform: translate3d(0, 40px, 0)
    }

    to {
        transform: translate3d(0, 0, 0);
        opacity: 1
    }
}

.content {
    background-color: #001219;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}


.loader {
    width: 30px;
    height: 30px;
    background-repeat: 10%;
    border: 4px solid #06d6a0;
    animation: loader 2s infinite ease;
}

.loader-wrapper {
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 99;
    top: 0;
    left: 0;
    background-color: #001219;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: opacity 6s ease-in;

}


.animated {
    animation-delay: 4s;
    animation-duration: 2s;
    animation-fill-mode: both;
    -webkit-animation-duration: 2s;
    -webkit-animation-fill-mode: both
}

.animatedFadeInUp {
    opacity: 0
}

.fadeInUp {
    opacity: 0;
    animation-name: fadeInUp;
    -webkit-animation-name: fadeInUp;
}


/* ****************************END OF ANIMATIONS**************************** */

/* *********************PARALLAX ELEMENTS************************************ */

.bgimg-2 {
    background-image: url("https://entrepreneurship.ncsu.edu/wp-content/uploads/2022/02/austin-skyline.jpeg");
}

.bgimg-3 {
    background-image: url("https://www.telegraph.co.uk/content/dam/Travel/Destinations/North%20America/USA/texas/austin-sixth-street-texas-nightlife.jpg")
}

.bgimg-1 {
    background-image: url("https://cdn.wallpapersafari.com/76/31/PgmM08.jpg")
}

.bgimg-1,
.bgimg-2,
.bgimg-3 {
    position: relative;
    opacity: 0.65;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 400px;
    max-height: 600px;
}

/* **************************END OF PARALLAX ELEMENTS********************************************** */


/* ******************MEDIA QUERIES**************************** */

@media only screen and (max-device-width: 1366px) {
    #pBgIMG {
        display: none;
    }



}

@media only screen and (max-device-width: 1024px) {

    .bgimg-1,
    .bgimg-2,
    .bgimg-3 {
        background-attachment: scroll;
    }
}


@media screen and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {

    body {
        font-size: 20px;
    }

    section {

        padding-right: 20px;
        padding-left: 20px;
    }

    h1 {
        font-size: 30px;
    }

    h3.big-heading {
        font-size: 35px;
    }

    h2.big-heading {
        margin: 0px;
        font-size: clamp(20px, 6vw, 40px);
    }
}

/****************your css rules for ipad portrait *********************/

@media all and (max-device-width: 800px) {

    .inner {
        width: 300px;
    }

    .cards {
        padding-top: 5px;
        display: flex;
        flex-direction: column;
    }
}



@media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
    /* your css rules for ipad landscape */


    .bgimg-1,
    .bgimg-2,
    .bgimg-3 {
        display: none;
    }

}



@media all and (device-width: 1200px) {
    h2.big-heading {
        font-size: 40px;
    }
}

@media (min-width:576px) {
    #mobileLinks {
        display: none;
    }

}



@media (max-width:576px) {

    .jobsStyled {
        height: 550px;
    }

    #nBarAnchor {
        display: none;
    }

    li {
        display: block;

    }

    .tab button {
        display: inline-block;
        width: fit-content;
        border-radius: 5px;


    }
}




@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {

    .cards {
        padding-top: 5px;
        display: flex;
        flex-direction: column;
        gap: 5px;
    }


    img {
        width: 40px;
        height: 40px;

    }

    button.tablinks {
        padding: 0;
        box-shadow: 0 20px 30px -15px #f72585;

    }


    .tab .tablinks {
        text-align: center;
        cursor: pointer;
        background-color: rgb(2, 48, 71);
        color: rgb(6, 214, 160);
    }

    .navbar {
        font-size: smaller;
    }


    h1 {
        font-size: clamp(20px, 50vw, 10px);
    }

    h2.big-heading {

        font-size: clamp(40px, 60vw, 12px);
    }


    h3.big-heading {
        font-size: 30px;
    }


    .homeStyled,
    .jobsStyled,
    .portfolioStyled,
    .aboutStyled,
    .contactStyled {
        box-shadow: 0 20px 30px -15px #f72585;
        padding: 20px;
        font-size: small;
    }




}

@media (max-width:576) {
    #nBarAnchor {
        display: none;
    }
}

@media (max-width:300px) {


    #footerNav {
        display: none;
    }

    .aboutStyledPic {
        display: none;
    }

    section {
        font-size: smaller;
        padding: 1%
    }

    .skills-list {
        display: unset;
    }

    h2.numbered-heading {
        font-style: 10px;
    }

    h3.big-heading {
        font-size: 10px;
    }

    h2.big-heading {
        font-size: 1.5rem;
    }

    .inner {

        padding: 5%;
        font-size: smaller
    }
}

